# serializer version: 1
# name: test_delete_by_column_filters[clickhouse]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'active',
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_column_filters[delta]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'active',
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_column_filters[duckdb]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'active',
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_column_filters[inmemory]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'active',
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_column_filters[lancedb]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'active',
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_ids[clickhouse]
  dict({
    'remaining_ids': list([
      's2',
      's4',
    ]),
    'remaining_values': list([
      20,
      40,
    ]),
    'total_deleted': 3,
  })
# ---
# name: test_delete_by_ids[delta]
  dict({
    'remaining_ids': list([
      's2',
      's4',
    ]),
    'remaining_values': list([
      20,
      40,
    ]),
    'total_deleted': 3,
  })
# ---
# name: test_delete_by_ids[duckdb]
  dict({
    'remaining_ids': list([
      's2',
      's4',
    ]),
    'remaining_values': list([
      20,
      40,
    ]),
    'total_deleted': 3,
  })
# ---
# name: test_delete_by_ids[inmemory]
  dict({
    'remaining_ids': list([
      's2',
      's4',
    ]),
    'remaining_values': list([
      20,
      40,
    ]),
    'total_deleted': 3,
  })
# ---
# name: test_delete_by_ids[lancedb]
  dict({
    'remaining_ids': list([
      's2',
      's4',
    ]),
    'remaining_values': list([
      20,
      40,
    ]),
    'total_deleted': 3,
  })
# ---
# name: test_delete_by_retention[clickhouse]
  dict({
    'remaining_ids': list([
      's3',
      's4',
      's5',
    ]),
    'remaining_values': list([
      30,
      40,
      50,
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_retention[delta]
  dict({
    'remaining_ids': list([
      's3',
      's4',
      's5',
    ]),
    'remaining_values': list([
      30,
      40,
      50,
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_retention[duckdb]
  dict({
    'remaining_ids': list([
      's3',
      's4',
      's5',
    ]),
    'remaining_values': list([
      30,
      40,
      50,
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_retention[inmemory]
  dict({
    'remaining_ids': list([
      's3',
      's4',
      's5',
    ]),
    'remaining_values': list([
      30,
      40,
      50,
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_by_retention[lancedb]
  dict({
    'remaining_ids': list([
      's3',
      's4',
      's5',
    ]),
    'remaining_values': list([
      30,
      40,
      50,
    ]),
    'total_deleted': 2,
  })
# ---
# name: test_delete_combined_criteria[clickhouse]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's4',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'archived',
      'active',
    ]),
    'total_deleted': 1,
  })
# ---
# name: test_delete_combined_criteria[delta]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's4',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'archived',
      'active',
    ]),
    'total_deleted': 1,
  })
# ---
# name: test_delete_combined_criteria[duckdb]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's4',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'archived',
      'active',
    ]),
    'total_deleted': 1,
  })
# ---
# name: test_delete_combined_criteria[inmemory]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's4',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'archived',
      'active',
    ]),
    'total_deleted': 1,
  })
# ---
# name: test_delete_combined_criteria[lancedb]
  dict({
    'remaining_ids': list([
      's1',
      's3',
      's4',
      's5',
    ]),
    'remaining_statuses': list([
      'active',
      'active',
      'archived',
      'active',
    ]),
    'total_deleted': 1,
  })
# ---
# name: test_delete_empty_result[clickhouse]
  dict({
    'all_ids_present': list([
      's1',
      's2',
      's3',
      's4',
      's5',
    ]),
    'remaining_count': 5,
    'total_deleted': 0,
  })
# ---
# name: test_delete_empty_result[delta]
  dict({
    'all_ids_present': list([
      's1',
      's2',
      's3',
      's4',
      's5',
    ]),
    'remaining_count': 5,
    'total_deleted': 0,
  })
# ---
# name: test_delete_empty_result[duckdb]
  dict({
    'all_ids_present': list([
      's1',
      's2',
      's3',
      's4',
      's5',
    ]),
    'remaining_count': 5,
    'total_deleted': 0,
  })
# ---
# name: test_delete_empty_result[inmemory]
  dict({
    'all_ids_present': list([
      's1',
      's2',
      's3',
      's4',
      's5',
    ]),
    'remaining_count': 5,
    'total_deleted': 0,
  })
# ---
# name: test_delete_empty_result[lancedb]
  dict({
    'all_ids_present': list([
      's1',
      's2',
      's3',
      's4',
      's5',
    ]),
    'remaining_count': 5,
    'total_deleted': 0,
  })
# ---
# name: test_provenance_snapshot[aggregation]
  list([
    dict({
      'metaxy_data_version': '1014862498860343476',
      'metaxy_data_version_by_field': dict({
        'avg_temp': '6163507272211444577',
      }),
      'metaxy_provenance': '1014862498860343476',
      'metaxy_provenance_by_field': dict({
        'avg_temp': '6163507272211444577',
      }),
      'sensor_id': 's1',
    }),
    dict({
      'metaxy_data_version': '1014862498860343476',
      'metaxy_data_version_by_field': dict({
        'avg_temp': '6163507272211444577',
      }),
      'metaxy_provenance': '1014862498860343476',
      'metaxy_provenance_by_field': dict({
        'avg_temp': '6163507272211444577',
      }),
      'sensor_id': 's1',
    }),
    dict({
      'metaxy_data_version': '18096585114014269458',
      'metaxy_data_version_by_field': dict({
        'avg_temp': '261283034550370924',
      }),
      'metaxy_provenance': '18096585114014269458',
      'metaxy_provenance_by_field': dict({
        'avg_temp': '261283034550370924',
      }),
      'sensor_id': 's2',
    }),
    dict({
      'metaxy_data_version': '18096585114014269458',
      'metaxy_data_version_by_field': dict({
        'avg_temp': '261283034550370924',
      }),
      'metaxy_provenance': '18096585114014269458',
      'metaxy_provenance_by_field': dict({
        'avg_temp': '261283034550370924',
      }),
      'sensor_id': 's2',
    }),
    dict({
      'metaxy_data_version': '18096585114014269458',
      'metaxy_data_version_by_field': dict({
        'avg_temp': '261283034550370924',
      }),
      'metaxy_provenance': '18096585114014269458',
      'metaxy_provenance_by_field': dict({
        'avg_temp': '261283034550370924',
      }),
      'sensor_id': 's2',
    }),
  ])
# ---
# name: test_provenance_snapshot[expansion]
  list([
    dict({
      'metaxy_data_version': '17728614726008822322',
      'metaxy_data_version_by_field': dict({
        'frames': '630352910380992152',
      }),
      'metaxy_provenance': '17728614726008822322',
      'metaxy_provenance_by_field': dict({
        'frames': '630352910380992152',
      }),
      'video_id': 'v1',
    }),
    dict({
      'metaxy_data_version': '14296500364855365617',
      'metaxy_data_version_by_field': dict({
        'frames': '10348219724213583713',
      }),
      'metaxy_provenance': '14296500364855365617',
      'metaxy_provenance_by_field': dict({
        'frames': '10348219724213583713',
      }),
      'video_id': 'v2',
    }),
  ])
# ---
# name: test_provenance_snapshot[identity]
  list([
    dict({
      'id': 'p1',
      'metaxy_data_version': '15883541735666767932',
      'metaxy_data_version_by_field': dict({
        'derived': '8475109261492640533',
      }),
      'metaxy_provenance': '15883541735666767932',
      'metaxy_provenance_by_field': dict({
        'derived': '8475109261492640533',
      }),
    }),
    dict({
      'id': 'p2',
      'metaxy_data_version': '1808417406924181125',
      'metaxy_data_version_by_field': dict({
        'derived': '8296696257561636328',
      }),
      'metaxy_provenance': '1808417406924181125',
      'metaxy_provenance_by_field': dict({
        'derived': '8296696257561636328',
      }),
    }),
    dict({
      'id': 'p3',
      'metaxy_data_version': '17174152805143818928',
      'metaxy_data_version_by_field': dict({
        'derived': '9339585255793357375',
      }),
      'metaxy_provenance': '17174152805143818928',
      'metaxy_provenance_by_field': dict({
        'derived': '9339585255793357375',
      }),
    }),
  ])
# ---
# name: test_soft_vs_hard_delete[clickhouse]
  dict({
    'hard_delete': dict({
      'remaining_count': 5,
      'remaining_ids': list([
        's1',
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 0,
    }),
    'soft_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
  })
# ---
# name: test_soft_vs_hard_delete[delta]
  dict({
    'hard_delete': dict({
      'remaining_count': 5,
      'remaining_ids': list([
        's1',
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 0,
    }),
    'soft_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
  })
# ---
# name: test_soft_vs_hard_delete[duckdb]
  dict({
    'hard_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
    'soft_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
  })
# ---
# name: test_soft_vs_hard_delete[inmemory]
  dict({
    'hard_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
    'soft_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
  })
# ---
# name: test_soft_vs_hard_delete[lancedb]
  dict({
    'hard_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
    'soft_delete': dict({
      'remaining_count': 4,
      'remaining_ids': list([
        's2',
        's3',
        's4',
        's5',
      ]),
      'rows_deleted': 1,
    }),
  })
# ---
